# roper

./: .gitignore  CHANGELOG.rst  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg
roper/: __init__.py  __main__.py  lib.py  tasks.py
tests/: test_roper.py
