[tool.poetry]
name = "roper"
version = "0.1.0"
description = ""
authors = ["Øystein S. Haaland <oystein@beat.no>"]

[tool.poetry.dependencies]
python = "^3.6"
rope = "^0.14.0"
invoke = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
