[tool.poetry]
name = "roper"
version = "0.1.2"
description = "A CLI tool for the roper library."
authors = ["Øystein S. Haaland <oystein@beat.no>"]
readme ="README.rst"

[tool.poetry.dependencies]
python = "^3.6"
rope = "^0.14.0"
invoke = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
roper = "roper.__main__:program.run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
