[metadata]
name = roper
version = attr: roper.__version__
description = A CLI tool for the roper library.
long_description = file: README.rst
author = Øystein S. Haaland
author_email = oystein@beat.no
url = https://github.com/beat-no/roper

[options]
packages = roper
install_requires =
    rope
    invoke

[options.entry_points]
console_scripts =
	roper = roper.__main__:program.run

[bumpversion]
current_version = 0.1.3
commit = True
tag = True

[bumpversion:file:setup.cfg]

[bumpversion:file:roper/__init__.py]

[bumpversion:file:pyproject.toml]
